--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@ span.reverse {unicode-bidi: bidi-override;direction: rtl;}
   <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <img src="images/avatar.jpg" style="width:100%" />
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-home w3-xxlarge"></i><p>DOMŮ</p></a>
-    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-user w3-xxlarge"></i><p>JÁ</p></a>
-    <a href="#reference" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-eye w3-xxlarge"></i><p>ZPRÁVY</p></a>
+    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-user w3-xxlarge"></i><p>ZNALOSTI</p></a>
+    <a href="#reference" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-eye w3-xxlarge"></i><p>REFERENCE</p></a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-envelope w3-xxlarge"></i><p>KONTAKT</p></a>
   </nav>
   <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
     <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
       <a href="#" class="w3-bar-item w3-button" style="width:25% !important">DOMŮ</a>
-      <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">JÁ</a>
-      <a href="#reference" class="w3-bar-item w3-button" style="width:25% !important">ZPRÁVY</a>
+      <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ZNALOSTI</a>
+      <a href="#reference" class="w3-bar-item w3-button" style="width:25% !important">REFERENCE</a>
       <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">KONTAKT</a>
     </div>
   </div>
@@ -39,58 +39,54 @@ span.reverse {unicode-bidi: bidi-override;direction: rtl;}
       <p>Contract Programmer</p>
       <img src="images/operator.jpg" alt="me" class="w3-image" width="992" height="1108" />
     </header>
-
-      <div class="w3-content w3-justify w3-text-grey w3-padding-24" id="about">
-          <h2 class="w3-text-light-grey">Kvalifikace</h2>
-          <hr style="width:200px" class="w3-opacity" />
-          <p>
-              Jsem zkušený vývojář s bohatou praxí ve vývoji převážně podnikových aplikací. Mám velmi dobrou znalost Microsoft Visual C++ a C#.
-              V posledních pěti letech se intenzivně věnuji Microsoft MVC ASP .Net technologiím s unit testing. Na straně klienta i s jazyky JavaScript, jQuery a Node.js.
-              <ul>
-                <li>MS-SQL (SQL, T-SQL, LINQ)</li>
-                <li>Oracle (SQL, PL/SQL a LINQ)</li>
-				<li>MySQL, Firebird</li>
-				<li>v současnosti také MongoDB a Redis</li>
-              </ul>
-          </p>
-          <p>
-              Moje odborné znalosti zahrnují všechny fáze vývoje, od počáteční analýzy až po návrh a implementaci.
-              Kromě svých technických dovedností jsem skvělý komunikátor a týmový hráč.
-              Moje schopnost dobře komunikovat mi umožňuje efektivně pracovat s klienty pro určení cílů a požadavků na aplikace.
-          </p>
+    <div class="w3-content w3-justify w3-text-grey w3-padding-24" id="about">
+      <h2 class="w3-text-light-grey">Kvalifikace</h2>
+      <hr style="width:200px" class="w3-opacity" />
+      <p>
+        Jsem zkušený vývojář s bohatou praxí ve vývoji převážně podnikových aplikací. Mám velmi dobrou znalost Microsoft Visual C++ a C# .Net Core.
+        V posledních pěti letech se intenzivně věnuji Microsoft MVC ASP .Net Core REST-API technologiím s unit testing. Na straně klienta i s jazyky JavaScript, jQuery a Node.js.
+        <ul>
+          <li>MS-SQL (SQL, T-SQL, LINQ)</li>
+          <li>Oracle (SQL, PL/SQL a LINQ)</li>
+          <li>MySQL, Firebird</li>
+          <li>v současnosti také MongoDB a Redis</li>
+        </ul>
+      </p>
+      <p>
+          Moje odborné znalosti zahrnují všechny fáze vývoje, od počáteční analýzy až po návrh a implementaci.
+          Kromě svých technických dovedností jsem skvělý komunikátor a týmový hráč.
+          Moje schopnost dobře komunikovat mi umožňuje efektivně pracovat s klienty pro určení cílů a požadavků na aplikace.
+      </p>
+    </div>
+    <div class="w3-padding-24 w3-content w3-text-grey" id="skills">
+      <h2 class="w3-padding-16 w3-text-light-grey">Znalosti</h2>
+      <hr style="width:200px" class="w3-opacity" />
+      <p class="w3-wide">C#, .NET, ASP.NET CORE, REST-API</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:95%"></div>
       </div>
-
-      <div class="w3-padding-24 w3-content w3-text-grey" id="skills">
-        <h2 class="w3-padding-16 w3-text-light-grey">Znalosti</h2>
-        <hr style="width:200px" class="w3-opacity" />
-        <p class="w3-wide">C# .Net</p>
-        <div class="w3-white">
-          <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-        </div>
-        <p class="w3-wide">C / C++</p>
-        <div class="w3-white">
-          <div class="w3-dark-grey" style="height:28px;width:85%"></div>
-        </div>
-        <p class="w3-wide">JavaScript and jQuery</p>
-        <div class="w3-white">
-          <div class="w3-dark-grey" style="height:28px;width:70%"></div>
-        </div>
-        <p class="w3-wide">SQL, T-SQL, PL/SQL</p>
-        <div class="w3-white">
-          <div class="w3-dark-grey" style="height:28px;width:80%"></div>
-        </div>
-     </div>
-
-      <div class="w3-row w3-center w3-padding-24 w3-content w3-light-grey">
-          <div class="w3-quarter w3-section"><span class="w3-xlarge">10+</span><br />Partnerů</div>
-          <div class="w3-quarter w3-section"><span class="w3-xlarge">50+</span><br />Klientů</div>
-          <div class="w3-quarter w3-section"><span class="w3-xlarge">80+</span><br />Projektů</div>
-          <div class="w3-quarter w3-section"><span class="w3-xlarge">100+</span><br />Konzultací</div>
+      <p class="w3-wide">C / C++</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:85%"></div>
       </div>
-
+      <p class="w3-wide">JavaScript, Node.js, jQuery</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:70%"></div>
+      </div>
+      <p class="w3-wide">SQL, T-SQL, PL/SQL</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:80%"></div>
+      </div>
+    </div>
     <div class="w3-padding-24 w3-content w3-text-grey" id="reference">
       <h2 class="w3-text-light-grey">Reference</h2>
       <hr style="width:200px" class="w3-opacity" />
+      <div class="w3-row-padding w3-margin-top">
+        <div class="w3-quarter"><div class="w3-card-4 w3-center"><img src="images/hronovsky.png" style="width:100%;max-width:170px;" class="w3-image"></img></div></div>
+        <div class="w3-quarter"><div class="w3-card-4 w3-center"><img src="images/kba.png" style="width:100%;max-width:170px;" class="w3-image"></img></div></div>
+        <div class="w3-quarter"><div class="w3-card-4 w3-center"><img src="images/metrostav.png" style="width:100%;max-width:170px;" class="w3-image"></img></div></div>
+        <div class="w3-quarter"><div class="w3-card-4 w3-center"><img src="images/ila.png" style="width:100%;max-width:170px;" class="w3-image"></img></div></div>
+      </div>
       <div class="w3-section">
         <img src="images/radek.jpg" alt="" class="w3-left w3-circle w3-margin-right" style="width:80px" />
         <p><span class="w3-large w3-margin-right">Ing. Radomír Kopecký.</span><span class="w3-hide-small"> Vedoucí technologického rozvoje.</span></p>
@@ -101,7 +97,6 @@ span.reverse {unicode-bidi: bidi-override;direction: rtl;}
         <p>Pečlivý, spolehlivý, ochotný a přístupný novým technologiím. Vytrhl nám trn z paty.</p>
       </div>
     </div>
-
     <div class="w3-padding-24 w3-content w3-text-grey" id="contact">
       <h2 class="w3-text-light-grey">Kontakt na mě</h2>
       <hr style="width:200px" class="w3-opacity" />
