--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-body, h1, h2, h3, h4, h5, h6 {font-family: "Montserrat", sans-serif;}
-span.reverse {unicode-bidi: bidi-override;direction: rtl;}
-.w3-row-padding img {margin-bottom: 12px;}
-.w3-sidebar {width: 120px;background: #222;}
-#main {margin-left: 120px;}
+body,h1,h2,h3,h4,h5,h6{font-family:"Montserrat",sans-serif;}
+h2{margin-bottom:0;}
+ul.nb li{border-bottom:none;margin:0 8px;}
+span.reverse{unicode-bidi:bidi-override;direction:rtl;}
+.w3-row-padding img{margin-bottom:12px;}
+.w3-sidebar{width:120px;background:#222;}
+#main{margin-left:120px;}
 @media only screen and (max-width: 600px) {#main {margin-left: 0;}}
   </style>
 </head>
@@ -22,6 +24,7 @@ span.reverse {unicode-bidi: bidi-override;direction: rtl;}
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-home w3-xxlarge"></i><p>DOMŮ</p></a>
     <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-user w3-xxlarge"></i><p>ZNALOSTI</p></a>
     <a href="#reference" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-eye w3-xxlarge"></i><p>REFERENCE</p></a>
+    <a href="#repo" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-cloud w3-xxlarge"></i><p>REPO</p></a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black"><i class="fa fa-envelope w3-xxlarge"></i><p>KONTAKT</p></a>
   </nav>
   <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
@@ -43,39 +46,46 @@ span.reverse {unicode-bidi: bidi-override;direction: rtl;}
       <h2 class="w3-text-light-grey">Kvalifikace</h2>
       <hr style="width:200px" class="w3-opacity" />
       <p>
-        Jsem zkušený vývojář s bohatou praxí ve vývoji převážně podnikových aplikací. Mám velmi dobrou znalost Microsoft Visual C++ a C# .Net Core.
-        V posledních pěti letech se intenzivně věnuji Microsoft MVC ASP .Net Core REST-API technologiím s unit testing. Na straně klienta i s jazyky JavaScript, jQuery a Node.js.
-        <ul>
-          <li>MS-SQL (SQL, T-SQL, LINQ)</li>
-          <li>Oracle (SQL, PL/SQL a LINQ)</li>
-          <li>MySQL, Firebird</li>
-          <li>v současnosti také MongoDB a Redis</li>
-        </ul>
+        Jsem zkušený softwarový vývojář s bohatou praxí a hlubokou znalostí
+        Microsoft technologií, včetně C++ a C# .Net Core.
       </p>
       <p>
-          Moje odborné znalosti zahrnují všechny fáze vývoje, od počáteční analýzy až po návrh a implementaci.
-          Kromě svých technických dovedností jsem skvělý komunikátor a týmový hráč.
-          Moje schopnost dobře komunikovat mi umožňuje efektivně pracovat s klienty pro určení cílů a požadavků na aplikace.
+        Během posledních pěti let jsem se intenzivně zaměřoval na moderní vývoj
+        webových aplikací pomocí Blazor, ASP.NET Core MVC a REST-API, s důrazem
+        na automatizované testování. Mám také rozsáhlé zkušenosti s vývojem
+        na straně klienta pomocí technologií JavaScript, jQuery a Node.js.
       </p>
+      <ul>
+        <li>MS-SQL (SQL, T-SQL, LINQ)</li>
+        <li>Oracle (SQL, PL/SQL a LINQ)</li>
+        <li>MySQL, Firebird</li>
+        <li>aktuálně MongoDB a Redis</li>
+      </ul>
+      <p>Mám rozsáhlé zkušenosti se všemi fázemi vývoje softwaru, od úvodní
+        analýzy přes návrh až po samotnou implementaci a následné zaškolení.
+        Klíčová je pro mě nejen technická stránka, ale i schopnost propojit
+        byznys s technologií. Jako komunikativní týmový hráč aktivně pracuji
+        s klienty, abych přesně pochopil jejich potřeby a zajistil, že výsledná
+        aplikace splní veškeré jejich požadavky a cíle.</p>
     </div>
     <div class="w3-padding-24 w3-content w3-text-grey" id="skills">
       <h2 class="w3-padding-16 w3-text-light-grey">Znalosti</h2>
       <hr style="width:200px" class="w3-opacity" />
-      <p class="w3-wide">C#, .NET, ASP.NET CORE, REST-API</p>
+      <p class="w3-wide">C#, .NET, ASP.NET CORE</p>
+      <div class="w3-white">
+        <div class="w3-dark-grey" style="height:28px;width:98%"></div>
+      </div>
+      <p class="w3-wide">SQL, T-SQL, PL/SQL</p>
       <div class="w3-white">
         <div class="w3-dark-grey" style="height:28px;width:95%"></div>
       </div>
       <p class="w3-wide">C / C++</p>
       <div class="w3-white">
-        <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+        <div class="w3-dark-grey" style="height:28px;width:80%"></div>
       </div>
       <p class="w3-wide">JavaScript, Node.js, jQuery</p>
       <div class="w3-white">
         <div class="w3-dark-grey" style="height:28px;width:70%"></div>
-      </div>
-      <p class="w3-wide">SQL, T-SQL, PL/SQL</p>
-      <div class="w3-white">
-        <div class="w3-dark-grey" style="height:28px;width:80%"></div>
       </div>
     </div>
     <div class="w3-padding-24 w3-content w3-text-grey" id="reference">
@@ -88,14 +98,28 @@ span.reverse {unicode-bidi: bidi-override;direction: rtl;}
         <div class="w3-quarter"><div class="w3-card-4 w3-center"><img src="images/ila.png" style="width:100%;max-width:170px;" class="w3-image"></img></div></div>
       </div>
       <div class="w3-section">
-        <img src="images/radek.jpg" alt="" class="w3-left w3-circle w3-margin-right" style="width:80px" />
-        <p><span class="w3-large w3-margin-right">Ing. Radomír Kopecký.</span><span class="w3-hide-small"> Vedoucí technologického rozvoje.</span></p>
-        <p>Ruda nám velice pomohl školením ASP .Net technologií.</p>
-        <br />
-        <img src="images/david.jpg" alt="" class="w3-left w3-circle w3-margin-right" style="width:80px" />
-        <p><span class="w3-large w3-margin-right">David Veselý.</span><span class="w3-hide-small"> Owner of software company.</span></p>
-        <p>Pečlivý, spolehlivý, ochotný a přístupný novým technologiím. Vytrhl nám trn z paty.</p>
+        <ul class="w3-ul nb">
+          <li class="nb">
+            <img src="images/radek.jpg" alt="" class="w3-left w3-circle w3-margin-right" style="width:80px" />
+            <p><span class="w3-large w3-margin-right w3-text-white">Ing. Radomír Kopecký</span><span class="w3-hide-small"> Vedoucí technologického rozvoje.</span></p>
+            <p>Ruda nám velice pomohl školením ASP .Net technologií.</p>
+          </li>	
+          <li class="nb">
+            <img src="images/david.jpg" alt="" class="w3-left w3-circle w3-margin-right" style="width:80px" />
+            <p><span class="w3-large w3-margin-right w3-text-white">David Veselý</span><span class="w3-hide-small"> Owner of software company.</span></p>
+            <p>Pečlivý, spolehlivý, ochotný a přístupný novým technologiím. Vytrhl nám trn z paty.</p>
+          </li>
+        </ul>
       </div>
+    </div>
+    <div class="w3-padding-24 w3-content w3-text-grey" id="repo">
+      <h2 class="w3-text-light-grey">Odkazy na repo</h2>
+      <hr style="width:200px" class="w3-opacity" />
+      <div class="w3-section">
+        <p><i class="fa fa-user fa-fw w3-text-white w3-xxlarge w3-margin-right"></i><a href="https://ruchudy.github.io/">ruchudy.github.io</a></p>
+        <p><i class="fa fa-cloud fa-fw w3-text-white w3-xxlarge w3-margin-right"></i><a href="https://github.com/RuChudy/HledacFirmy">github.com/RuChudy/HledacFirmy</a></p>
+      </div>
+      <br class="w3-hide-small" />
     </div>
     <div class="w3-padding-24 w3-content w3-text-grey" id="contact">
       <h2 class="w3-text-light-grey">Kontakt na mě</h2>
